Add age group filter, embeddable map widget, and documentation
- Add age_group field (Youth / Adult / Youth and Adult) to listings
  with admin form controls and public map filter dropdown
- Default map view to Youth services
- Create embeddable map widget at /#/embed with compact UI
- Add embed.js script for one-line embedding on third-party sites
- Add embed code generator page at /#/embed-code with live preview
- Hyperlink partners on About page (Casper Youth Hub, Unicorn Solutions,
  Oregon Youth Resource Map, Healthy Transitions, Mapping Action Collective)
- Rename nav title to "Wyoming Resource Map"
- Make map center/zoom configurable via siteConfig.json
- Update README with embedding docs, site config reference, and new files

Made-with: Cursor

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta name="theme-color" content="#1B3A5C">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Wyoming Youth Resource Map — find youth-serving resources across Wyoming for ages 11-20" />
-    <title>Wyoming Youth Resource Map</title>
+    <title>Wyoming Resource Map</title>
   </head>
   <body>
     <div id="app"><noscript>You need to enable JavaScript to run this app.</noscript></div>
